@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -30,6 +30,8 @@ import java.util.function.Consumer;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.PropertyEditorRegistry;
 import org.springframework.beans.SimpleTypeConverter;
+import org.springframework.beans.propertyeditors.CustomBooleanEditor;
+import org.springframework.beans.propertyeditors.CustomNumberEditor;
 import org.springframework.beans.propertyeditors.FileEditor;
 import org.springframework.boot.convert.ApplicationConversionService;
 import org.springframework.core.ResolvableType;
@@ -40,6 +42,7 @@ import org.springframework.core.convert.ConverterNotFoundException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.converter.ConditionalGenericConverter;
 import org.springframework.core.convert.support.GenericConversionService;
+import org.springframework.core.io.Resource;
 import org.springframework.util.CollectionUtils;
 
 /**
@@ -152,16 +155,8 @@ final class BindConverter {
 	private static class TypeConverterConversionService extends GenericConversionService {
 
 		TypeConverterConversionService(Consumer<PropertyEditorRegistry> initializer) {
-			addConverter(new TypeConverterConverter(createTypeConverter(initializer)));
 			ApplicationConversionService.addDelimitedStringConverters(this);
-		}
-
-		private SimpleTypeConverter createTypeConverter(Consumer<PropertyEditorRegistry> initializer) {
-			SimpleTypeConverter typeConverter = new SimpleTypeConverter();
-			if (initializer != null) {
-				initializer.accept(typeConverter);
-			}
-			return typeConverter;
+			addConverter(new TypeConverterConverter(initializer));
 		}
 
 		@Override
@@ -183,49 +178,63 @@ final class BindConverter {
 		private static final Set<Class<?>> EXCLUDED_EDITORS;
 		static {
 			Set<Class<?>> excluded = new HashSet<>();
-			excluded.add(FileEditor.class); // gh-12163
+			excluded.add(CustomNumberEditor.class);
+			excluded.add(CustomBooleanEditor.class);
+			excluded.add(FileEditor.class);
 			EXCLUDED_EDITORS = Collections.unmodifiableSet(excluded);
 		}
 
-		private final SimpleTypeConverter typeConverter;
+		private final Consumer<PropertyEditorRegistry> initializer;
 
-		TypeConverterConverter(SimpleTypeConverter typeConverter) {
-			this.typeConverter = typeConverter;
+		// SimpleTypeConverter is not thread-safe to use for conversion but we can use it
+		// in a thread-safe way to check if conversion is possible.
+		private final SimpleTypeConverter matchesOnlyTypeConverter;
+
+		TypeConverterConverter(Consumer<PropertyEditorRegistry> initializer) {
+			this.initializer = initializer;
+			this.matchesOnlyTypeConverter = createTypeConverter();
 		}
 
 		@Override
 		public Set<ConvertiblePair> getConvertibleTypes() {
-			return Collections.singleton(new ConvertiblePair(String.class, Object.class));
+			return Set.of(new ConvertiblePair(String.class, Object.class),
+					new ConvertiblePair(String.class, Resource[].class),
+					new ConvertiblePair(String.class, Collection.class));
 		}
 
 		@Override
 		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
-			return getPropertyEditor(targetType.getType()) != null;
-		}
-
-		@Override
-		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-			SimpleTypeConverter typeConverter = this.typeConverter;
-			return typeConverter.convertIfNecessary(source, targetType.getType());
-		}
-
-		private PropertyEditor getPropertyEditor(Class<?> type) {
-			if (type == null || type == Object.class || Collection.class.isAssignableFrom(type)
-					|| Map.class.isAssignableFrom(type)) {
-				return null;
+			Class<?> type = targetType.getType();
+			if (type == null || type == Object.class || Map.class.isAssignableFrom(type)) {
+				return false;
 			}
-			SimpleTypeConverter typeConverter = this.typeConverter;
-			PropertyEditor editor = typeConverter.getDefaultEditor(type);
+			if (Collection.class.isAssignableFrom(type)) {
+				TypeDescriptor elementType = targetType.getElementTypeDescriptor();
+				if (elementType == null || (!Resource.class.isAssignableFrom(elementType.getType()))) {
+					return false;
+				}
+			}
+			PropertyEditor editor = this.matchesOnlyTypeConverter.getDefaultEditor(type);
 			if (editor == null) {
-				editor = typeConverter.findCustomEditor(type, null);
+				editor = this.matchesOnlyTypeConverter.findCustomEditor(type, null);
 			}
 			if (editor == null && String.class != type) {
 				editor = BeanUtils.findEditorByConvention(type);
 			}
-			if (editor == null || EXCLUDED_EDITORS.contains(editor.getClass())) {
-				return null;
+			return (editor != null && !EXCLUDED_EDITORS.contains(editor.getClass()));
+		}
+
+		@Override
+		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+			return createTypeConverter().convertIfNecessary(source, targetType.getType(), targetType);
+		}
+
+		private SimpleTypeConverter createTypeConverter() {
+			SimpleTypeConverter typeConverter = new SimpleTypeConverter();
+			if (this.initializer != null) {
+				this.initializer.accept(typeConverter);
 			}
-			return editor;
+			return typeConverter;
 		}
 
 	}
